# playwright-python

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.github/workflows/pages/: pages-build-deployment.yml
src/taf/: __init__.py
src/taf/core/: config.py  di.py  driver.py  logger.py  reporting.py
src/taf/models/: user.py
src/taf/pages/: base_page.py  inventory_page.py  login_page.py
tests/: conftest.py  test_config.py  test_user.py
tests/e2e/: test_add_to_cart.py  test_login.py
tools/: coverage_badge.py
